[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/player/player.png" type="Texture" id=1]
[ext_resource path="res://source/player/Player.gd" type="Script" id=2]
[ext_resource path="res://source/player/BackTrailLine.gd" type="Script" id=3]
[ext_resource path="res://assets/particle/ex.png" type="Texture" id=4]
[ext_resource path="res://source/player/PlayerFSM.gd" type="Script" id=5]
[ext_resource path="res://assets/font/player_state_label.tres" type="DynamicFont" id=6]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 0.336364 ), 0.0, 0.34026, 0, 0, Vector2( 1, 1 ), -0.00964298, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.607306 )
colors = PoolColorArray( 0, 0, 0, 0, 0.4, 0.498039, 1, 1 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 7.9, 7.9 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 1, 7 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 1, 7 )

[sub_resource type="Animation" id=6]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("BodySprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0.87451, 0.988235, 1 ), Color( 1, 1, 1, 1 ), Color( 0, 0.87451, 0.988235, 1 ) ]
}

[node name="Player" type="KinematicBody2D"]
collision_mask = 30
script = ExtResource( 2 )

[node name="PlayerFSM" type="Node" parent="."]
script = ExtResource( 5 )

[node name="DebugLabels" type="Node2D" parent="."]
visible = false

[node name="StateLabel" type="Label" parent="DebugLabels"]
margin_left = -14.411
margin_top = -33.3654
margin_right = 14.589
margin_bottom = -22.3654
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = ExtResource( 6 )
text = "STATE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpawnCPUParticles" type="CPUParticles2D" parent="."]
position = Vector2( 0, -8 )
emitting = false
amount = 30
lifetime = 0.3
one_shot = true
explosiveness = 0.75
lifetime_randomness = 1.0
texture = ExtResource( 4 )
flag_align_y = true
spread = 180.0
initial_velocity = 300.0
orbit_velocity = 60.15
radial_accel_random = 1.0
scale_amount = 0.5
scale_amount_random = 1.0
hue_variation_random = 1.0

[node name="BodySprite" type="Sprite" parent="."]
position = Vector2( 0, -8 )
texture = ExtResource( 1 )

[node name="BackTrailLine" type="Line2D" parent="BodySprite"]
show_behind_parent = true
width = 16.0
width_curve = SubResource( 1 )
gradient = SubResource( 2 )
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
script = ExtResource( 3 )

[node name="BodyCollisionShape" type="CollisionShape2D" parent="."]
position = Vector2( 0, -8 )
shape = SubResource( 3 )

[node name="LeftArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="LeftCollisionShape" type="CollisionShape2D" parent="LeftArea"]
position = Vector2( -9, -8 )
shape = SubResource( 4 )

[node name="RightArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="RightCollisionShape" type="CollisionShape2D" parent="RightArea"]
position = Vector2( 9, -8 )
shape = SubResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/spawn = SubResource( 6 )

[node name="DashTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="LeftArea" to="." method="_on_LeftArea_body_entered"]
[connection signal="body_exited" from="LeftArea" to="." method="_on_LeftArea_body_exited"]
[connection signal="body_entered" from="RightArea" to="." method="_on_RightArea_body_entered"]
[connection signal="body_exited" from="RightArea" to="." method="_on_RightArea_body_exited"]
[connection signal="timeout" from="DashTimer" to="." method="_on_DashTimer_timeout"]
